[tool.poetry]
name = "progtool"
version = "0.2.0"
description = "Assistant for the Programming courses"
authors = ["Frederic Vogels <frederic.vogels@kuleuven.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gitpython = "^3.1.31"
pyyaml = "^6.0"
libsass = "^0.22.0"
pydantic = "^2.0.0"
rich = "^13.4.2"
click = "^8.1.3"
pygithub = "^1.59.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
progtool = 'progtool.cli.main:process_command_line_arguments'

[tool.pytest.ini_options]
python_files = [ "*_tests.py" ]
